crates/pg_syntax/tests/snapshots/postgres_regress/json@246.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ia2d FROM json_populate_record(NULL::jsrec, '{\"ia2d\": [[1, \"2\"], [null, 4]]}') q;"
---
SelectStmt@0..88
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "ia2d"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeFunction@17..87
    List@17..84
      FuncCall@17..84
        Ident@17..37 "json_populate_record"
        Ascii40@37..38 "("
        TypeCast@38..49
          AConst@38..42
            NullP@38..42 "NULL"
          Typecast@42..44 "::"
          TypeName@44..49
            Ident@44..49 "jsrec"
        Ascii44@49..50 ","
        Whitespace@50..51 " "
        AConst@51..84
          Sconst@51..84 "'{\"ia2d\": [[1, \"2\"],  ..."
    Ascii41@84..85 ")"
    Whitespace@85..86 " "
    Alias@86..87
      Ident@86..87 "q"
  Ascii59@87..88 ";"

